@@ -1,0 +1,8 @@
+Title: Fixed wrong NagVis links in "custom links" snapin
+Level: 1
+Component: multisite
+Version: 1.2.5i4
+Date: 1402901516
+Class: fix
+
+
