@@ -14,6 +14,7 @@
     Multisite:
     * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...
     * 0166 FIX: mobile gui: Fixed colors of command list...
+    * 0820 FIX: Fixed wrong NagVis links in "custom links" snapin
 
     WATO:
     * 0987 New button for updating DNS cache...
